ETHREEOH-220 SHARE tagging is not fully I18N ready -- Fixed first problem: all characters except these will be treated as part of a word"<whitespace>,&/" SLNG-874 After Upload of a single document library should scroll down and highlight SLNG-1274 Share I18N issues - 7. On the Blog and Discussions pages, the "next" and "prev" links that provide paging capabilities.
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@11160 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/themes/default/base.css
+++ b/root/projects/slingshot/source/web/themes/default/base.css
@@ -511,3 +511,11 @@ textarea
 {
    border-color: #286A99;
 }
+
+/* Paginator link styling */
+
+.yui-skin-default .yui-pg-container a.yui-pg-next,
+.yui-skin-default .yui-pg-container a.yui-pg-previous
+{
+   color:#2B6EB5;
+}
